--- a/css/style.css
+++ b/css/style.css
@@ -54,14 +54,12 @@
 			border-radius: 0.5rem;
 			width: 75%;
 			outline: none;
-			padding: 0 0.4rem 0 0.4rem;
+			padding: 0 0.4rem;
 		}
 		.user {
 			position: relative;
 			height: 15rem;
 			background-color: transparent;
-			box-shadow: 0 5px 10px #777;
-			z-index: 98;
 			border: none;
 		}
 		.icon {
@@ -73,7 +71,7 @@
 			height: 6rem;
 			background-color: rgba(255,255,255,0.3);
 			border-radius: 50%;
-			border: 1px solid #111;
+			border: 1px solid #fff;
 		}
 		.icon > p {
 			font-size: 1.5rem;
@@ -100,11 +98,11 @@
 		}
 		.account:before {
 			position: absolute;
-			margin-top: -0.5rem;
+			margin-top: -0.25rem;
 			left: 50%;
 			top: 50%;
 			content: "";
-			height: 1rem;
+			height: 0.5rem;
 			width: 0;
 			border: 1px solid #fff;
 		}
@@ -115,25 +113,31 @@
 		.nav:before {
 			position: absolute;
 			margin-left:-7.5rem;  
-			margin-top: -1px;
+			margin-top: -0.5px;
 			top: 50%;
 			left: 50%;
 			content: "";
 			width: 15rem;
-			height: 2px;
+			height: 1px;
+			background: -webkit-linear-gradient(left,#eee,#999,#666,#999,#eee);
+			background: -o-linear-gradient(left,#eee,#999,#666,#999,#eee);
+			background: -moz-linear-gradient(left,#eee,#999,#666,#999,#eee);
+			background: linear-gradient(left,#eee,#999,#666,#999,#eee);
 			z-index: 99;
-			background: -webkit-linear-gradient(left,#eee,#eee,#777,#eee,#eee);
 		}
 		.nav:after {
 			position: absolute;
-			margin-top:-7.5rem;  
-			margin-left: -1px;
+			margin-top:-6rem;  
+			margin-left: -0.5px;
 			top: 50%;
 			left: 50%;
 			content: "";
-			width: 2px;
-			height: 15rem;
-			background: -webkit-linear-gradient(#eee,#eee,#777,#eee,#eee);
+			width: 1px;
+			height: 12rem;
+			background: -webkit-linear-gradient(#eee,#999,#666,#999,#eee);
+			background: -o-linear-gradient(#eee,#999,#666,#999,#eee);
+			background: -moz-linear-gradient(#eee,#999,#666,#999,#eee);
+			background: linear-gradient(#eee,#999,#666,#999,#eee);
 			z-index: 99;
 		}
 		.nav > a {
