--- a/css/style.css
+++ b/css/style.css
@@ -42,69 +42,109 @@
         	background: linear-gradient(#084fff,#08feff);
         }
 		.search {
-			display: flex;
-			justify-content: space-around;
-			align-items: center;
+			position: relative;
 			height: 2.5rem;
 			background-color: transparent;
 		}
 		.search > input {
+			position: absolute;
 			height: 1.8rem;
 			border: none;
 			border-radius: 0.5rem;
-			width: 73%;
+			width: 18rem;
 			outline: none;
 			padding: 0 0.4rem;
+			margin: -0.9rem 0 0 -9rem; 
+			top: -1rem;
+			left: 50%;
+			background-color: rgba(255,255,255,0.9);
+			box-sizing: border-box;
+			transition: all .5s;
+			opacity: 0;
 		}
-		.user {
+		.search > .appTitle {
+			position: absolute;
+			top: 1.5rem;
+			left: 50%;
+			width: 10rem;
+			height: 2rem;
+			color: white;
+			font-family: Microsoft YaHei;
+			font-size: 1.2rem;
+			text-align: center;
+			margin: -1rem 0 0 -5rem; 
+			transition: all .5s;
+		}
+		#searchButton {
+			position: absolute;
+			width: 2.5rem;
+			height: 2.5rem;
+			background-color: transparent;
+			right: 0;
+			z-index: 98;
+			transition: all .5s;
+		}
+		.buttonScale {
+			width: 2.5rem;
+			height: 2.5rem;
+			position: relative;
+		}
+		.searchOpen {
+			position: absolute;
+			top: 0.6rem;
+			left: 0.6rem;
+			width: 1.25rem;
+			height: 1.25rem;
+			box-sizing: border-box;
+			border: 2px solid white;
+			border-radius: 50%;	
+			transition: all .5s;		
+		}
+		.searchOpen:before {
+			position: absolute;
+			content: "";
+			height: 2px;
+			width: 0.3rem;
+			background-color: white;
+			transform: rotate(45deg);
+			top:1rem;
+			left: 0.9rem;
+		}
+		.searchClose {
+			position: absolute;
+			top: 1.25rem;
+			left: 0.5rem;
+			opacity: 0;
+			transition: all .5s;
+		}
+		.searchClose:before {
+			position: absolute;
+			content: "";
+			height: 2px;
+			width: 1.6rem;
+			background-color: white;
+			transform: rotate(45deg);
+		}
+		.searchClose:after {
+			position: absolute;
+			content: "";
+			height: 2px;
+			width: 1.6rem;
+			background-color: white;
+			transform: rotate(-45deg);
+		}
+		.slideShow {
 			position: relative;
 			height: 15rem;
 			background-color: transparent;
 			border: none;
 		}
-		.icon {
-			position: absolute;
-			margin-left: -3rem;
-			left: 50%;
-			top: 3rem;
-			width: 6rem;
-			height: 6rem;
-			background-color: rgba(255,255,255,0.3);
-			border-radius: 50%;
-			border: 1px solid #fff;
-		}
-		.icon > p {
-			font-size: 1.5rem;
-			width: 3rem;
-			font-family: Microsoft YaHei;
-			margin: 1rem auto 0 auto;
-			color: #fff;
-		}
-		.account {
-			position: absolute;
-			width: 10rem;
-			margin-left: -5rem;
-			left: 50%;
-			top: 12rem;
-		}
-		.account > a {
-			display: block;
-			width: 50%;
-			text-decoration: none;
-			color: #fff;
-			font-family: Microsoft YaHei;
-			float: left;
+		.slider {
+			font-size: 5rem;
 			text-align: center;
-		}
-		.account:before {
-			position: absolute;
-			margin-top: -0.25rem;
-			left: 50%;
-			top: 50%;
-			content: "";
-			height: 0.5rem;
-			width: 0;
-			border: 1px solid #fff;
+			color: white;
+			height: 13rem;
+			background-color: #999;
 		}
 		.nav {
 			position: relative;
@@ -190,16 +230,6 @@
 			background-color: #111;
 			transition: all .5s;
 		}
-		#sideNav {
-			background-color: #eee;
-			position: absolute;
-			top: 0;
-			color: #084fff;
-			font-size: 5rem;
-			z-index: 98;
-			transition: all .6s;
-			box-shadow: 1px 1px 1px #555;
-		}
 		#sideButton {
 			position: absolute;
 			left: 0;
@@ -243,4 +273,61 @@
 			margin-top: -1px;
 			background-color: white;
 			transition: all .5s;
+		}
+		#sideNav {
+			background-color: #eee;
+			position: absolute;
+			top: 0;
+			color: #084fff;
+			z-index: 98;
+			transition: all .6s;
+			box-shadow: 1px 1px 1px #555;
+		}
+		.user {
+			height: 15rem;
+			background-color: #555;
+		}
+		.icon {
+			position: absolute;
+			margin-left: -3rem;
+			left: 50%;
+			top: 3rem;
+			width: 6rem;
+			height: 6rem;
+			background-color: rgba(255,255,255,0.3);
+			border-radius: 50%;
+			border: 1px solid #fff;
+		}
+		.icon > p {
+			font-size: 1.5rem;
+			width: 3rem;
+			font-family: Microsoft YaHei;
+			margin: 1rem auto 0 auto;
+			color: #fff;
+		}
+		.account {
+			position: absolute;
+			width: 10rem;
+			margin-left: -5rem;
+			left: 50%;
+			top: 12rem;
+		}
+		.account > a {
+			display: block;
+			width: 50%;
+			text-decoration: none;
+			color: #fff;
+			font-family: Microsoft YaHei;
+			float: left;
+			text-align: center;
+		}
+		.account:before {
+			position: absolute;
+			margin-top: -0.25rem;
+			left: 50%;
+			top: 50%;
+			content: "";
+			height: 0.5rem;
+			width: 0;
+			border: 1px solid #fff;
 		}
