--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@
         }
         .clear {clear: both;}
         #page {
-        	position: relative;
+        	position: fixed;
         	background: -webkit-linear-gradient(#084fff,#08feff);
         	background: -o-linear-gradient(#084fff,#08feff);
         	background: -moz-linear-gradient(#084fff,#08feff);
@@ -499,6 +499,7 @@
 			font-size: 1rem;
 			box-sizing: border-box;
 			border: 1px solid rgba(12,172,255,0.7); 
+			border-radius: 5px;
 		}
 		.loginCancle {
 			background-color: transparent;
@@ -510,4 +511,5 @@
 			border: 1px solid #FF495C;
 			text-align: center;
 			padding: 0.5rem 0;
+			border-radius: 5px;
 		}
